--- a/package.json
+++ b/package.json
@@ -17,4 +17,6 @@
     "@biomejs/biome": "1.9.2",
     "unbuild": "^2.0.0"
   },
+    "build": "unbuild",
+    "test": "echo \"Error: no test specified\" && exit 1"
 }
