chore: add LICENSE

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "LICENSE"
   ],
   "homepage": "https://github.com/staticWagomU/remark-budoux",
   "keywords": [
